# UFC-Web-Scraping

./: .gitignore  Makefile  README.md  pyproject.toml
src/: main.py
src/scraper/: constants.py  events.py  fighters.py  fights.py  fightstats.py  get_urls.py  normalise_tables.py  utils.py
ufc_web_scraper/: analysis.ipynb
